# xml2arrow

./: AGENTS.md  BENCHMARK_RESULTS.md  CLAUDE.md  CLAUDE_IMPROVEMENTS.md  CODE_REVIEW.md  Cargo.toml  DEEP_TEXT_EXTRACTION.md  OPTIMIZATION_README.md  OPTIMIZATION_SUMMARY.txt  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_IMPROVEMENT_PLAN.md  README.md  REVIEW_PARSER_REGISTRY.md  REVIEW_XML_PARSERS.md  TRIE_BENCHMARK_REPORT.md  TRIE_FINAL_SUMMARY.md  TRIE_IMPLEMENTATION_GUIDE.md  TRIE_IMPLEMENTATION_SUMMARY.md  TRIE_INTEGRATION.md  TRIE_PARSER_GUIDE.md  TRIE_QUICKSTART.md  TRIE_QUICK_REFERENCE.md  TRIE_STATUS.md  TRIE_TEST_REPORT.md  bench_trie_output.txt  test_root_issue.rs  test_root_table.xml  test_root_table.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codspeed.yml
benches/: benchmark_comparison.rs  parse_benchmark.rs  trie_benchmark.rs
examples/: benchmark_comparison.rs  profile_large.rs
src/: config.rs  errors.rs  lib.rs  path_registry.rs  path_trie.rs  xml_parser.rs  xml_parser.rs.optimized_final  xml_parser_trie.rs  xml_path.rs
tests/: integration_tests.rs  test_trie_benchmark.rs
tests/common/: mod.rs
