[package]
name = "xml2arrow"
version = "0.11.0"
edition = "2024"
description = "Efficiently convert XML data to Apache Arrow format for high-performance data processing"
license = "MIT"
repository = "https://github.com/mluttikh/xml2arrow"
keywords = ["xml", "arrow", "parser", "conversion"]
categories = ["data-structures", "encoding"]
readme = "README.md"

[dependencies]
arrow = "57.1.0"
derive_more = { version = "2.0.1", features = ["from"] }
indexmap = "2.12.0"
quick-xml = "0.38.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
string_cache = "0.9.0"
fxhash = "0.2.1"
smallvec = "1.13"

[dev-dependencies]
rstest = "0.25"
tempfile = "3.23"
approx = "0.5.1"
criterion = "0.5"

[features]
default = ["trie_parser"]
trie_parser = []
python = ["pyo3"]

[dependencies.pyo3]
version = "0.26"
default-features = false
optional = true

[[bench]]
name = "parse_benchmark"
harness = false

[[bench]]
name = "trie_benchmark"
harness = false
