[package]
name = "xml2arrow"
version = "0.15.0"
edition = "2024"
description = "Efficiently convert XML data to Apache Arrow format for high-performance data processing"
license = "MIT"
repository = "https://github.com/mluttikh/xml2arrow"
keywords = ["xml", "arrow", "parser", "conversion"]
categories = ["data-structures", "encoding"]
readme = "README.md"

[dependencies]
arrow = "58.1.0"
derive_more = { version = "2.1.1", features = ["from"] }
indexmap = "2.14.0"
quick-xml = "0.39.2"
serde = { version = "1.0.228", features = ["derive"] }
yaml_serde = "0.10"
fxhash = "0.2.1"
fast-float2 = "0.2.3"
atoi = "2.0.0"

[dev-dependencies]
rstest = "0.25"
tempfile = "3.23"
approx = "0.5.1"
criterion = "0.5"
codspeed-criterion-compat = "4.4.1"

[features]
python = ["pyo3", "arrow/pyarrow"]

[dependencies.pyo3]
version = "0.28"
default-features = false
optional = true

[[bench]]
name = "parse_benchmark"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
